# mbc-evidence-dag-paper

./: README.md  pyproject.toml
analysis/: 01_fetch_trials.py  02_extract_eligibility.py  03_encode_guideline.py  04_build_dag.py  05_compute_efdpr.py  06_compute_odi.py  07_figures.py  08_sensitivity_no_g16.py  extraction_protocol.md  extraction_protocol_nsclc.md  v2_01_systematic_search.py  v2_02_filter_corpus.py  v2_03_assemble_corpus.py  v2_04_prepare_extraction.py  v2_05_merge_and_kappa.py  v2_06_adjudication.py  v2_07_build_dag.py  v2_08_extend_guideline.py  v2_09_compute_efdpr.py  v2_10_compute_odi.py  v2_11_figures.py  v2_12_figures_polished.py  v3_01_systematic_search_nsclc.py  v3_02_filter_nsclc.py  v3_03_assemble_nsclc.py  v3_04_prepare_extraction_nsclc.py  v3_05_merge_and_kappa_nsclc.py  v3_06_encode_nsclc_guideline.py  v3_07_build_combined_dag.py  v3_08_compute_pooled_efdpr.py  v3_09_figures.py  v3_10_supplement_tables.py  wordcount.py
docs/: cover_letter.md  prereg-v2.md  prereg-v3.md  prereg.md
manuscript/: JOURNAL.md  discussion.argdown  discussion.tex  discussion_v2.tex  main.docx  main.tex  main_v2.docx  main_v2.tex  paper_A_NSCLC_only.docx  paper_A_NSCLC_only.tex  paper_A_clinical_v3.docx  paper_A_clinical_v3.tex  paper_B_methods_v3.docx  paper_B_methods_v3.tex  references.bib  supplement.docx  supplement.tex  supplement_paper_A.tex  supplement_table_S1.tex  supplement_table_S2.tex  supplement_table_S3.tex  supplement_table_S4.tex  supplement_v2.docx  supplement_v2.tex  tab_cohort.tex  tab_efdpr.tex  tab_odi.tex  v2_tab_cohort.tex  v2_tab_efdpr.tex  (+1 more)
(+104 files in other folders)
