[project]
name = "mbc-evidence-dag-paper"
version = "0.1.0"
description = "End-to-end reproducible study."
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    "scikit-learn>=1.4,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<0.14",
    "statsmodels>=0.14,<0.15",
]
